added unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Codefarts.ExtensionMethodsNETStd20/obj/
 Codefarts.ExtensionMethodsNETStd20/.vs/
 Codefarts.ExtensionMethodsNETStd20/bin/
 codealike.json
+Codefarts.ExtensionMethods_Tests/bin/
+Codefarts.ExtensionMethods_Tests/obj/
