Added unit test extensions for Assert in a new unit test specific project Added extensions for INotifyPropertyChanged Added additional project targeting different platforms/versions added more unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ codealike.json
 Codefarts.ExtensionMethods_Tests/bin/
 Codefarts.ExtensionMethods_Tests/obj/
 .vs/
+Codefarts.ExtensionMethodsStd21/obj/
+Codefarts.UnitTestExtensionMethodsStd20/obj/
+Codefarts.ExtensionMethodsStd21/bin/
+Codefarts.ExtensionMethodsCore31/obj/
+Codefarts.ExtensionMethodsCore31/bin/
+Codefarts.UnitTestExtensionMethodsStd20/bin/
