--- a/Codefarts.ExtensionMethodsNET5/Codefarts.ExtensionMethodsNET5.csproj
+++ b/Codefarts.ExtensionMethodsNET5/Codefarts.ExtensionMethodsNET5.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <RootNamespace>Codefarts.ExtensionMethods</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
